lilv (0.15.0) unstable;

  * Add lilv_world_ask() for simply checking if a statement exists
  * Add lilv_nodes_merge()
  * Make lilv_plugin_get_port_by_designation() return a const pointer
  * Make state loading functions fall back to lv2:default for port values,
    so a plugin description can be loaded as default state.
  * Support atom:supports in lilv_port_supports_event()
  * Add va_list variant of lilv_plugin_get_num_ports_of_class()
  * Fix several plugin functions that failed to load data if called first
  * Correctly depend on serd at build time (fix compilation in odd cases)
  * Disable timestamps in HTML documentation for reproducible build
  * lilvmm.hpp: Support varargs for Plugin::get_num_ports_of_class()
  * lilvmm.hpp: Add several missing methods
  * Update to waf 1.7.8 and autowaf r90 (install docs to versioned directory)

 -- David Robillard <d@drobilla.net>  Sat, 26 Jan 2013 16:17:52 -0500

lilv (0.14.4) stable;

  * Deprecate old flawed Lilv::Instance constructors
  * Fix documentation for ui_type parameter of lilv_ui_is_supported()
  * Fix crash when lv2info is run with an invalid URI argument
  * Gracefully handle failure to save plugin state and print error message
  * Reduce memory usage (per node)
  * Simpler node implementation always backed by a SordNode
  * Make all 'zix' symbols private to avoid symbol clashes in static builds
  * Add lv2bench utility
  * Fix various hyper-strict warnings
  * Do not require a C++ compiler to build
  * Add option to build utilities as static binaries
  * Upgrade to waf 1.7.2
  * lilvmm.hpp: Make Lilv::Instance handle features and failed instantiations
  * lilvmm.hpp: Add Lilv::Instance::get_handle()
  * lilvmm.hpp: Add Lilv::Instance::get_extension_data()

 -- David Robillard <d@drobilla.net>  Thu, 23 Aug 2012 01:38:29 -0400

lilv (0.14.2) stable;

  * Fix dynmanifest support

 -- David Robillard <d@drobilla.net>  Thu, 19 Apr 2012 16:11:31 -0400

lilv (0.14.0) stable;
