@@ -4,7 +4,8 @@ lilv (0.15.0) unstable;
   * Add lilv_nodes_merge()
   * Make lilv_plugin_get_port_by_designation() return a const pointer
   * Make state loading functions fall back to lv2:default for port values,
-    so a plugin description can be loaded as default state.
+    so a plugin description can be loaded as default state
+  * Ignore state ports with no value instead of printing an error
   * Support atom:supports in lilv_port_supports_event()
   * Add va_list variant of lilv_plugin_get_num_ports_of_class()
   * Fix several plugin functions that failed to load data if called first
@@ -14,7 +15,7 @@ lilv (0.15.0) unstable;
   * lilvmm.hpp: Add several missing methods
   * Update to waf 1.7.8 and autowaf r90 (install docs to versioned directory)
 
- -- David Robillard <d@drobilla.net>  Sat, 26 Jan 2013 16:17:52 -0500
+ -- David Robillard <d@drobilla.net>  Sat, 26 Jan 2013 21:14:13 -0500
 
 lilv (0.14.4) stable;
 
